traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: value est is not a member of object plm.universe.Direction
    } else if (getDirection() == Direction.est){
                                           ^